tests/errors/sem.invalid-scope.local-decl.or
main :: () -> void {
    x := 5;
    () -> void {
        x;
    };
};
